force-app/main/default/objects/bofc__BOFC_Popup__c/bofc__BOFC_Popup__c.object-meta.xml
<CustomObject>
    <label>BOFC Popup</label>
    <nameField>
        <label>BOFCPopup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFC Popup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>