force-app/main/default/objects/bofc__BOFC_Popup__c/fields/bofc__Image__c.field-meta.xml
<CustomField>
    <fullName>bofc__Image__c</fullName>
    <formula>IMAGE( bofc__Image_URL__c , &quot;Photo&quot;,500,750)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>