force-app/main/default/objects/bofc__BOFC_Popup__c/fields/bofc__Image_URL__c.field-meta.xml
<CustomField>
    <fullName>bofc__Image_URL__c</fullName>
    <label>Image URL</label>
    <type>Url</type>
</CustomField>