force-app/main/default/objects/bofc__BOFC_Popup__c/fields/bofc__of_mins__c.field-meta.xml
<CustomField>
    <fullName>bofc__of_mins__c</fullName>
    <formula>(  NOW()-CreatedDate)*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of mins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>