force-app/main/default/objects/bofc__BOFC_Popup__c/fields/bofc__Popup_First_Time__c.field-meta.xml
<CustomField>
    <fullName>bofc__Popup_First_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Popup First Time?</label>
    <type>Checkbox</type>
</CustomField>