force-app/main/default/objects/bofc__BOFC_Popup__c/fields/bofc__Redirect_URL__c.field-meta.xml
<CustomField>
    <fullName>bofc__Redirect_URL__c</fullName>
    <label>Redirect URL</label>
    <type>Url</type>
</CustomField>