force-app/main/default/objects/bofc__BOFC_Popup__c/fields/bofc__Type__c.field-meta.xml
<CustomField>
    <fullName>bofc__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Expire</fullName>
            </value>
            <value>
                <fullName>Free</fullName>
            </value>
            <value>
                <fullName>Priority</fullName>
            </value>
            <value>
                <fullName>AboutToExpire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>