force-app/main/default/objects/bofc__BOFC_Popup__c/fields/bofc__Version__c.field-meta.xml
<CustomField>
    <fullName>bofc__Version__c</fullName>
    <label>Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FullVersion</fullName>
            </value>
            <value>
                <fullName>FreeVersion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>